# ╔══════════════════════════════════════════════════════════════════════════════╗
# ║  Data - BUILD                                                                 ║
# ╚══════════════════════════════════════════════════════════════════════════════╝

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "data",
    srcs = glob(["**/*.py"]),
    deps = [
        "@pip//torch",
        "@pip//transformers",
        "@pip//datasets",
    ],
)












