# ╔══════════════════════════════════════════════════════════════════════════════╗
# ║  Factories Module - BUILD                                                    ║
# ╚══════════════════════════════════════════════════════════════════════════════╝

load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "factories",
    srcs = glob(["**/*.py"]),
    deps = [
        "@pip//torch",
        "@pip//transformers",
    ],
)












